--- a/src/app/Templates/register/register.component.html
+++ b/src/app/Templates/register/register.component.html
@@ -1,1 +1,59 @@
-<p>register works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center ">
+            <div class="container text-center">
+                <!-- <img logo> -->
+            </div>
+            
+            <h1>Register Here!</h1>
+            <form (ngSubmit)="formSubmit()">
+                <!-- email -->
+                <mat-form-field class="example-full-width" appearance="outline">
+                  <mat-label>Email</mat-label>
+                  <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                         placeholder="Ex. pat@example.com" [(ngModel)]="user.email">
+                  <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                    Please enter a valid email address
+                  </mat-error>
+                  <mat-error *ngIf="emailFormControl.hasError('required')">
+                    Email is <strong>required</strong>
+                  </mat-error>
+                </mat-form-field>
+
+                 <!-- username -->
+                 <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-label>Username</mat-label>
+                    <input type="text" matInput [formControl]="textFormControl" [errorStateMatcher]="matcher"
+                           placeholder="Ex. sg143" required [(ngModel)]="user.username">
+                    <mat-error *ngIf="textFormControl.hasError('required')">
+                      Username is <strong>required</strong>
+                    </mat-error>
+                  </mat-form-field>
+
+                  
+                  <!-- password -->
+                 <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input type="password" matInput [formControl]="passFormControl" [errorStateMatcher]="matcher"
+                           placeholder="Must be at least 6 characters long" required [(ngModel)]="user.password">
+                    <mat-error *ngIf="textFormControl.hasError('required')">
+                      password is <strong>required</strong>
+                    </mat-error>
+                  </mat-form-field>
+
+                  <!-- Gender -->
+                  <div class="my-3">
+                    <mat-button-toggle-group name="gender" aria-label="Gender" [(ngModel)]="user.gender">
+                        <mat-button-toggle value="male">Male</mat-button-toggle>
+                        <mat-button-toggle value="female">Female</mat-button-toggle>
+                        <mat-button-toggle value="other">Other</mat-button-toggle>
+                      </mat-button-toggle-group>
+                 </div>
+
+                  <button mat-raised-button color="primary" type="submit">Register</button>
+                  <button mat-raised-button color="warn" type="reset" class="ms-5">Register</button>
+              </form>
+              
+        </div>
+    </div>
+</div>
