functioning register and dummy of login created

--- a/src/app/Templates/login/login.component.html
+++ b/src/app/Templates/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center ">
+            <div class="container text-center">
+                <!-- <img logo> -->
+            </div>
+            
+            <h1>Register Here!</h1>
+            <form (ngSubmit)="formSubmit()">
+
+                 <!-- username -->
+                 <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-label>Username</mat-label>
+                    <input type="text" name="username" matInput [formControl]="textFormControl" [errorStateMatcher]="matcher"
+                           placeholder="Ex. sg143" required [(ngModel)]="user.username">
+                    <mat-error *ngIf="textFormControl.hasError('required')">
+                      Username is <strong>required</strong>
+                    </mat-error>
+                  </mat-form-field>
+
+                  
+                  <!-- password -->
+                 <mat-form-field class="example-full-width" appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input type="password" name="password" matInput [formControl]="passFormControl" [errorStateMatcher]="matcher"
+                           placeholder="Must be at least 6 characters long" required [(ngModel)]="user.password">
+                    <mat-error *ngIf="textFormControl.hasError('required')">
+                      password is <strong>required</strong>
+                    </mat-error>
+                  </mat-form-field>
+
+                  <button mat-raised-button color="primary" type="submit">Register</button>
+                  <button mat-raised-button color="warn" type="reset" class="ms-5">Reset</button>
+              </form>
+              
+        </div>
+    </div>
+</div>
