--- a/src/app/Templates/register/register.component.html
+++ b/src/app/Templates/register/register.component.html
@@ -10,7 +10,7 @@
                 <!-- email -->
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Email</mat-label>
-                  <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+                  <input type="email" name="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
                          placeholder="Ex. pat@example.com" [(ngModel)]="user.email">
                   <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
                     Please enter a valid email address
@@ -23,7 +23,7 @@
                  <!-- username -->
                  <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Username</mat-label>
-                    <input type="text" matInput [formControl]="textFormControl" [errorStateMatcher]="matcher"
+                    <input type="text" name="username" matInput [formControl]="textFormControl" [errorStateMatcher]="matcher"
                            placeholder="Ex. sg143" required [(ngModel)]="user.username">
                     <mat-error *ngIf="textFormControl.hasError('required')">
                       Username is <strong>required</strong>
@@ -34,7 +34,7 @@
                   <!-- password -->
                  <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input type="password" matInput [formControl]="passFormControl" [errorStateMatcher]="matcher"
+                    <input type="password" name="password" matInput [formControl]="passFormControl" [errorStateMatcher]="matcher"
                            placeholder="Must be at least 6 characters long" required [(ngModel)]="user.password">
                     <mat-error *ngIf="textFormControl.hasError('required')">
                       password is <strong>required</strong>
@@ -51,7 +51,7 @@
                  </div>
 
                   <button mat-raised-button color="primary" type="submit">Register</button>
-                  <button mat-raised-button color="warn" type="reset" class="ms-5">Register</button>
+                  <button mat-raised-button color="warn" type="reset" class="ms-5">Reset</button>
               </form>
               
         </div>
