--- a/src/app/Templates/register/register.component.css
+++ b/src/app/Templates/register/register.component.css
@@ -7,3 +7,8 @@
   .example-full-width {
     width: 100%;
   }
+  .link{
+    text-decoration: none;
+    color: var(--bs-indigo);
+    cursor: pointer;
+}
