--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,1 +1,12 @@
-<h1>I love SG</h1>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <a routerLink="" class="link">MyApp</a>
+      <span class="example-spacer"></span>
+      <button mat-raised-button routerLink="/login">Login</button>
+      <button mat-icon-button class="example-icon px-2" aria-label="Example icon-button with menu icon">
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button mat-icon-button class="example-icon px-2" aria-label="Example icon-button with menu icon">
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
+    </mat-toolbar-row>
