--- a/src/app/Templates/register/register.component.html
+++ b/src/app/Templates/register/register.component.html
@@ -4,9 +4,9 @@
             <div class="container text-center">
                 <!-- <img logo> -->
             </div>
-            
-            <h1>Register Here!</h1>
-            <form (ngSubmit)="formSubmit()">
+            <mat-card class="mt-3">
+              <h1 class="mb-3">Register Here!</h1>
+              <form (ngSubmit)="formSubmit()">
                 <!-- email -->
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Email</mat-label>
@@ -52,7 +52,9 @@
 
                   <button mat-raised-button color="primary" type="submit">Register</button>
                   <button mat-raised-button color="warn" type="reset" class="ms-5">Reset</button>
+                  <div class="container my-4">Already an existing user? <a class="link" href="/login">Click here to Sign in!</a></div>
               </form>
+            </mat-card>
               
         </div>
     </div>
