--- a/src/app/Templates/login/login.component.html
+++ b/src/app/Templates/login/login.component.html
@@ -32,7 +32,7 @@
                    </mat-error>
                  </mat-form-field>
 
-                 <button mat-raised-button color="primary" type="submit">Register</button>
+                 <button mat-raised-button color="primary" type="submit">Login</button>
                  <button mat-raised-button color="warn" type="reset" class="ms-5">Reset</button>
              <div class="container my-4">New here? <a class="link" href="/signup">Click here to register!</a></div>
            </form>
