--- a/src/app/Templates/landing-page/landing-page.component.html
+++ b/src/app/Templates/landing-page/landing-page.component.html
@@ -1,1 +1,19 @@
-<p>landing-page works!</p>
+<div class="landingWrapper">
+    <div class="heroImage">
+        <div class="heroContent">
+            <h1 style="font-size: xx-large; font-weight: 700;">Comfortable dresses</h1>
+            <p>Get Dresses that match your beauty and comfort!!</p>
+            <a routerLink="product"><button mat-raised-button color="primary" class="my-3">Browse Catalogue</button></a>
+        </div>
+    </div>
+    <div class="frontCards mt-2">
+        <div class="miniHero m1 pb-3">
+            <h3 style="font-size: x-large; font-weight: 500;" class="m-3">Special white day Dresses!!</h3>
+            <a mat-raised-button color="primary" class="m-3" routerLink="product" class="m-3">Go White!</a>
+        </div>
+        <div class="miniHero m2 pb-3">
+            <h3 style="font-size: x-large; font-weight: 500;" class="m-3">40% off on wedding dresses!!</h3>
+            <a routerLink="product" mat-raised-button color="primary" class="m-3">Check it out!</a>
+        </div>
+    </div>
+</div>
