--- a/src/app/Components/nav-bar/nav-bar.component.css
+++ b/src/app/Components/nav-bar/nav-bar.component.css
@@ -7,3 +7,11 @@
     cursor: pointer;
     padding: 0.5rem;
 }
+.searchBar{
+  padding: 1rem;
+  background-color: white;
+  max-height: 1rem;
+}
+.searchBar input{
+  border-radius: 5px;
+}
