--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row class="d-flex justify-content-between">
-      <a routerLink="" class="link">MyApp</a>
+      <a routerLink="" class="link .fs-5">MyApp</a>
 
  
         <div class="searchBarHolder">
