--- a/src/app/Templates/products/products.component.html
+++ b/src/app/Templates/products/products.component.html
@@ -1,1 +1,6 @@
-<p>products works!</p>
+<div class="gridDisplay">
+    <app-filter></app-filter>
+    <div class="productWrapper">
+
+    </div>
+</div>
