--- a/src/app/Components/filter/filter.component.html
+++ b/src/app/Components/filter/filter.component.html
@@ -7,6 +7,15 @@
     <label for="priceVal" class="my-3 fs-5">Enter Max Price</label>
     <input type="range" min="0" max="10000" value="700" step="200" name="priceVal" class="ourSlider" [(ngModel)]="formData.priceVal">
     <div class="my-2 ms-2">{{formData.priceVal}}</div>
+    <label for="categories" class="my-3 fs-5">Select Categories</label>
+    <mat-checkbox class="checkboxes" 
+    *ngFor="let item of check;let i = index" 
+    [value]="item"
+    (change)="clickHandler()"
+    >
+    {{item}}
+    </mat-checkbox>
+
     
   </form>
 </div>
