--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -1,1 +1,31 @@
-<p>product-card works!</p>
+
+<div class="productCard pd-sm mg-sm">
+    <div class='productImage flex align-items-center'>
+        <img src="../../../assets/brooke-lark-W1B2LpQOBxA-unsplash.jpg" alt="CardTitle" />
+    </div>
+    <div class="wishListIcon flex align-items-center">
+        <i class="far fa-heart fs-lg"></i>  
+    </div>
+    <div class="cardContent">
+        <div class="priceContainer mg-y-sm pd-sm">
+            <h3 class="cardHead">CardTitle</h3>
+            <span>3456 Reviews</span>
+            <div class="productPrice fw-xxl"><i class="fas fa-rupee-sign"></i> 4399
+            </div>
+        </div>
+    </div>
+    
+    <div class='cardActionButtons'>
+            <button class="btn btn-success fs-md mg-t-sm" >
+                    <i class="fas fa-shopping-cart mg-r-sm">  
+                    </i>Add to Cart
+            </button>
+            <button mat-raised-button color="primary" class="fs-md mg-y-sm textCenter">
+                    <i  class="fas fa-shopping-cart mg-r-sm"> </i>View Details
+            </button>
+        
+    </div>
+        
+        
+
+</div>
