--- a/src/app/Templates/products/products.component.css
+++ b/src/app/Templates/products/products.component.css
@@ -1,5 +1,13 @@
 .gridDisplay{
     display: grid;
-    grid-template-columns: 25rem 1fr;
+    grid-template-columns: 18rem 1fr;
     gap: 0.5rem;
 }
+.pageContent {
+    width: 100%;
+    display: grid;
+    place-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+    grid-template-rows: repeat(auto-fill, 29rem);
+    gap: 2rem;
+  }
