--- a/src/app/Templates/products/products.component.html
+++ b/src/app/Templates/products/products.component.html
@@ -1,6 +1,7 @@
 <div class="gridDisplay">
     <app-filter></app-filter>
-    <div class="productWrapper">
-
+    <div class="pageContent">
+        <app-product-card></app-product-card>
     </div>
+    
 </div>
