--- a/src/app/Components/filter/filter.component.css
+++ b/src/app/Components/filter/filter.component.css
@@ -3,13 +3,16 @@
     overflow-y: auto;
     padding: 1rem;
     color: white;
+    min-height: calc(100vh - 4.5rem);
 }
 .filterWrapper h2{
-    font-weight: 500;
-    
+    font-weight: 500;   
+}
+.checkboxes{
+    margin: 0.3rem;
 }
 .ourSlider{
     width: 80%;
-    accent-color: white;
+    accent-color: #ffd740;
     display: block;
 }
