--- a/src/app/Templates/products/products.component.html
+++ b/src/app/Templates/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="gridDisplay">
     <app-filter></app-filter>
-    <div class="pageContent">
+    <div class="overflow">
         <app-product-card></app-product-card>
     </div>
     
