--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,12 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row class="d-flex justify-content-between">
       <a routerLink="" class="link .fs-5">MyApp</a>
-
- 
-        <div class="searchBarHolder">
-          <input matInput class="searchBar" placeholder="Ex. Pizza" value="">
-          <mat-icon>search</mat-icon>
-        </div>
  
       
      <div>
@@ -17,7 +11,7 @@
       
       
       
-      <button mat-icon-button class="example-icon px-2" aria-label="Example icon-button with menu icon">
+      <button routerLink="product" mat-icon-button class="example-icon px-2" aria-label="Example icon-button with menu icon">
         <mat-icon>shopping_cart</mat-icon>
       </button>
      </div>
