--- a/src/app/Templates/login/login.component.html
+++ b/src/app/Templates/login/login.component.html
@@ -28,7 +28,7 @@
 
                  <button mat-raised-button color="primary" type="submit">Login</button>
                  <button mat-raised-button color="warn" type="reset" class="ms-5">Reset</button>
-             <div class="container my-4">New here? <a class="link" href="/signup">Click here to register!</a></div>
+             <div class="container my-4">New here? <a class="link" routerLink="/signup">Click here to register!</a></div>
            </form>
            
             </mat-card>
