--- a/src/app/Templates/product/product.component.css
+++ b/src/app/Templates/product/product.component.css
@@ -1,5 +1,6 @@
 @import url("https://mirinda-mewi.netlify.app/styles/main.css");
 
+
 .filterWrapper{
     background-color: #673ab7;
     overflow-y: auto;
@@ -111,4 +112,25 @@
 .wishListIcon:hover {
   transition: all ease-in 0.3s;
   transform: rotateY(-180deg);
+}
+
+/* modal */
+
+#exampleModal{
+  color: black;  
+  background-color: inherit;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1055;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    outline: 0;
+}
+.modalImage {
+  max-height: 20rem;
+  overflow: hidden;
 }
