--- a/src/app/Templates/register/register.component.html
+++ b/src/app/Templates/register/register.component.html
@@ -76,7 +76,7 @@
 
           <button mat-raised-button color="primary" type="submit">Register</button>
           <button mat-raised-button color="warn" type="reset" class="ms-5">Reset</button>
-          <div class="container my-4">Already an existing user? <a class="link" href="/login">Click here to Sign in!</a>
+          <div class="container my-4">Already an existing user? <a class="link" routerLink="/login">Click here to Sign in!</a>
           </div>
         </form>
       </mat-card>
